--- a/nosotros.html
+++ b/nosotros.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="#">Servicios</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
             <li><a href="#">Galería</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
