--- a/servicios.html
+++ b/servicios.html
@@ -16,7 +16,7 @@
             <li><a href="index.html">Inicio</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
             <li><a href="servicios.html">Servicios</a></li>
-            <li><a href="#">Galería</a></li>
+            <li><a href="galeria.html">Galería</a></li>
             <li><a href="#">Contacto</a></li>
         </ul>
     </nav>
