--- a/contacto.html
+++ b/contacto.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Principal</title>
+    <title>Nosotros</title>
 </head>
 
 <body>
     <header>
-        <h1>Mi Página Web</h1>
-        <p>Bienvenido a mi sitio web</p>
+        <h1>Contacto</h1>
     </header>
     <nav>
         <ul>
@@ -22,8 +21,8 @@
         </ul>
     </nav>
     <main>
-        <h2>Bienvenido a nuestra Pagina Web</h2>
-        <p>Aquí encontrarás información sobre nuestros servicios y más.</p>
+        <h2>Contacto</h2>
+        <p>Aqui puedes encontrar nuestro contacto</p>
     </main>
     <footer>
         <p>&copy; 2025 Administrador Web</p>
