Enfoque del sitio

--- a/contacto.html
+++ b/contacto.html
@@ -25,7 +25,7 @@
         <p>Aqui puedes encontrar nuestro contacto</p>
     </main>
     <footer>
-        <p>&copy; 2025 Administrador Web</p>
+        <p>&copy; 2025 Comifast</p>
     </footer>
 </body>
 
