--- a/galeria.html
+++ b/galeria.html
@@ -25,7 +25,7 @@
         <p>Aqui puedes encontrar nuestra galeria</p>
     </main>
     <footer>
-        <p>&copy; 2025 Administrador Web</p>
+        <p>&copy; 2025 Comifast</p>
     </footer>
 </body>
 
