--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina Principal</title>
+    <title>ComiFast</title>
 </head>
 
 <body>
     <header>
-        <h1>Mi Página Web</h1>
-        <p>Bienvenido a mi sitio web</p>
+        <img src="logo.png" alt="Logo de la página">
+        <h1>ComiFast a tu servicio</h1>
+        <p>ComiFast es una empresa dedicada a brindar los mejores servicios de comida y bebidas donde quiera que te
+            encuentres</p>
     </header>
     <nav>
         <ul>
@@ -26,7 +28,7 @@
         <p>Aquí encontrarás información sobre nuestros servicios y más.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Administrador Web</p>
+        <p>&copy; 2025 Comifast</p>
     </footer>
 </body>
 
