--- a/nosotros.html
+++ b/nosotros.html
@@ -25,7 +25,7 @@
         <p>Somos una empresa dedicada a brindar los mejores servicios.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Administrador Web</p>
+        <p>&copy; 2025 Comifast</p>
     </footer>
 </body>
 
