arreglos en home

--- a/index.html
+++ b/index.html
@@ -9,26 +9,92 @@
 
 <body>
     <header>
-        <img src="logo.png" alt="Logo de la página">
+        <img src="logo.png" alt="Logo de ComiFast">
         <h1>ComiFast a tu servicio</h1>
-        <p>ComiFast es una empresa dedicada a brindar los mejores servicios de comida y bebidas donde quiera que te
-            encuentres</p>
+        <p>La mejor comida rápida en un solo lugar, con ingredientes frescos y sabor inigualable.</p>
     </header>
+
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
+            <li><a href="menu.html">Menú</a></li>
             <li><a href="servicios.html">Servicios</a></li>
             <li><a href="galeria.html">Galería</a></li>
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+
     <main>
-        <h2>Bienvenido a nuestra Pagina Web</h2>
-        <p>Aquí encontrarás información sobre nuestros servicios y más.</p>
+
+        <!-- Banner Principal -->
+        <section>
+            <h2>🔥 ¡Prueba nuestras hamburguesas y pizzas hoy! 🍕🍔</h2>
+            <img src="images/banner.jpg" width="1200" alt="Deliciosas hamburguesas y pizzas">
+            <p>¡Ofertas especiales y combos irresistibles todos los días!</p>
+        </section>
+
+        <!-- Artículos Destacados -->
+        <section>
+            <h2>Lo más pedido por nuestros clientes</h2>
+
+            <article>
+                <img src="images/hamburguesa1.png" width="200" alt="Hamburguesa Especial">
+                <h3>Hamburguesa Especial</h3>
+                <p>Una hamburguesa única con doble carne, queso cheddar, cebolla caramelizada y nuestra salsa secreta.
+                </p>
+            </article>
+
+            <article>
+                <img src="images/pizza1.png" width="200" alt="Pizza Pepperoni">
+                <h3>Pizza de Pepperoni</h3>
+                <p>Una pizza clásica con extra queso y el mejor pepperoni crujiente.</p>
+            </article>
+
+            <article>
+                <img src="images/pizza2.webp" width="200" alt="Pizza Familiar">
+                <h3>Pizza Familiar</h3>
+                <p>Disfruta en familia con 2 pizzas grandes, 4 bebidas y papas fritas.</p>
+            </article>
+        </section>
+
+        <!-- Beneficios de ComiFast -->
+        <section>
+            <h2>Por qué elegirnos</h2>
+
+            <article>
+                <h3>🛵 Entrega rápida</h3>
+                <p>Recibe tu pedido en menos de 30 minutos, garantizado.</p>
+            </article>
+
+            <article>
+                <h3>🥇 Ingredientes frescos</h3>
+                <p>Utilizamos solo los mejores ingredientes para darte el mejor sabor.</p>
+            </article>
+
+            <article>
+                <h3>💰 Promociones diarias</h3>
+                <p>Descuentos exclusivos todos los días para nuestros clientes.</p>
+            </article>
+        </section>
+
+        <!-- Testimonios -->
+        <section>
+            <h2>Lo que dicen nuestros clientes</h2>
+            <blockquote>
+                "Las hamburguesas son una locura, el sabor es increíble y la entrega fue súper rápida." - Juan Pérez
+            </blockquote>
+            <blockquote>
+                "ComiFast nunca me falla, pizzas calientes y deliciosas en tiempo récord." - María López
+            </blockquote>
+        </section>
+
     </main>
     <footer>
-        <p>&copy; 2025 Comifast</p>
+        <p>&copy; 2025 ComiFast | Todos los derechos reservados</p>
+        <p>📍 Sucre - Bolivia</p>
+        <p>📞 +591 63354864</p>
+        <p>📧 contacto@comifast.com</p>
     </footer>
 </body>
 
