--- a/contacto.html
+++ b/contacto.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>Contacto | Comifast</title>
 </head>
 
 <body>
     <header>
         <h1>Contacto</h1>
     </header>
+
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -20,12 +21,46 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+
     <main>
-        <h2>Contacto</h2>
-        <p>Aqui puedes encontrar nuestro contacto</p>
+        <section>
+            <h2>Formulario de Contacto</h2>
+            <form action="#" method="POST">
+                <div>
+                    <label for="nombre">Nombre:</label><br>
+                    <input type="text" id="nombre" name="nombre" required><br><br>
+                </div>
+
+                <div>
+                    <label for="email">Correo Electrónico:</label><br>
+                    <input type="email" id="email" name="email" required><br><br>
+                </div>
+
+                <div>
+                    <label for="mensaje">Mensaje:</label><br>
+                    <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br><br>
+                </div>
+
+                <div>
+                    <button type="submit">Enviar</button>
+                </div>
+            </form>
+        </section>
+
+        <section>
+            <h2>Ubicación</h2>
+            <p>Nos encontramos en la siguiente ubicación:</p>
+            <iframe src="https://www.google.com/maps?q=-19.0451701,-65.2581128&hl=es&z=16&output=embed" width="500"
+                height="400" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
+        </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Comifast</p>
+        <p>&copy; 2025 ComiFast | Todos los derechos reservados</p>
+        <p>📍 Sucre - Bolivia</p>
+        <p>📞 +591 63354864</p>
+        <p>📧 contacto@comifast.com</p>
     </footer>
 </body>
 
