--- a/nosotros.html
+++ b/nosotros.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>Nosotros | ComiFast</title>
 </head>
 
 <body>
     <header>
-        <h1>Nosotros</h1>
+        <h1>Sobre Nosotros</h1>
     </header>
+
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -20,12 +21,44 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+
     <main>
-        <h2>Sobre Nosotros</h2>
-        <p>Somos una empresa dedicada a brindar los mejores servicios.</p>
+        <section>
+            <h2>Quiénes Somos</h2>
+            <p>Somos una empresa comprometida con la excelencia, ofreciendo soluciones innovadoras para nuestros
+                clientes. Nuestro equipo está compuesto por profesionales altamente capacitados que trabajan con pasión
+                y dedicación.</p>
+        </section>
+
+        <section>
+            <h2>Nuestra Misión</h2>
+            <p>Brindar servicios de alta calidad, adaptándonos a las necesidades de nuestros clientes y garantizando su
+                satisfacción con cada proyecto.</p>
+        </section>
+
+        <section>
+            <h2>Nuestra Visión</h2>
+            <p>Ser líderes en nuestro sector, reconocidos por nuestra innovación, compromiso y excelencia en el servicio
+                al cliente.</p>
+        </section>
+
+        <section>
+            <h2>Valores</h2>
+            <ul>
+                <li>✔️ Compromiso</li>
+                <li>✔️ Innovación</li>
+                <li>✔️ Responsabilidad</li>
+                <li>✔️ Trabajo en equipo</li>
+                <li>✔️ Honestidad</li>
+            </ul>
+        </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Comifast</p>
+        <p>&copy; 2025 ComiFast | Todos los derechos reservados</p>
+        <p>📍 Sucre - Bolivia</p>
+        <p>📞 +591 63354864</p>
+        <p>📧 contacto@comifast.com</p>
     </footer>
 </body>
 
