--- a/servicios.html
+++ b/servicios.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros</title>
+    <title>Servicios | Comifast</title>
 </head>
 
 <body>
     <header>
-        <h1>Servicios</h1>
+        <h1>Nuestros Servicios</h1>
     </header>
+
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
@@ -20,12 +21,37 @@
             <li><a href="contacto.html">Contacto</a></li>
         </ul>
     </nav>
+
     <main>
-        <h2>Servicios</h2>
-        <p>Aqui puedes encontrar nuestros servicios</p>
+        <section>
+            <h2>Sobre Comifast</h2>
+            <p><strong>Comifast</strong> es una empresa innovadora dedicada a ofrecer los mejores productos
+                gastronómicos con un enfoque en rapidez y calidad. Nos especializamos en brindar experiencias culinarias
+                únicas, adaptándonos a las necesidades de nuestros clientes.</p>
+        </section>
+
+        <section>
+            <h2>Nuestros Servicios</h2>
+            <ul>
+                <li><strong>Entrega a Domicilio:</strong> Recibe tus pedidos en la puerta de tu casa con nuestro
+                    servicio de delivery rápido y seguro.</li>
+                <li><strong>Pedidos Personalizados:</strong> Ajustamos nuestros productos a tus gustos y necesidades, ya
+                    sea para eventos o preferencias individuales.</li>
+                <li><strong>Catering para Eventos:</strong> Ofrecemos opciones de catering para reuniones, fiestas y
+                    eventos corporativos con menús variados.</li>
+                <li><strong>Atención en Local:</strong> Ven a disfrutar de nuestra comida en un ambiente cómodo y
+                    acogedor en nuestras instalaciones.</li>
+                <li><strong>Promociones y Descuentos:</strong> Contamos con ofertas exclusivas y programas de
+                    fidelización para nuestros clientes frecuentes.</li>
+            </ul>
+        </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Comifast</p>
+        <p>&copy; 2025 ComiFast | Todos los derechos reservados</p>
+        <p>📍 Sucre - Bolivia</p>
+        <p>📞 +591 63354864</p>
+        <p>📧 contacto@comifast.com</p>
     </footer>
 </body>
 
